{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 81,
  "lineage": "d360c534-296f-86f9-6abf-de64ec31ed97",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "grafana_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:792248914698:loadbalancer/app/grafana-alb/60862a32185c3bf9",
            "arn_suffix": "app/grafana-alb/60862a32185c3bf9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "grafana-alb-464869263.ap-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-east-1:792248914698:loadbalancer/app/grafana-alb/60862a32185c3bf9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "grafana-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07597d2b2372d5411"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ebb1bd6755d04c83"
              },
              {
                "subnet_id": "subnet-0f81623dc22694d02"
              }
            ],
            "subnets": [
              "subnet-0ebb1bd6755d04c83",
              "subnet-0f81623dc22694d02"
            ],
            "vpc_id": "vpc-067fa0610e0274258",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3DQVH9N71FHZ0"
          },
          "dependencies": [
            "aws_security_group.grafana_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "grafana_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:792248914698:listener/app/grafana-alb/60862a32185c3bf9/9dede8ec8b817bc2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-east-1:792248914698:targetgroup/grafana-target-group/eb84442312607285",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-east-1:792248914698:listener/app/grafana-alb/60862a32185c3bf9/9dede8ec8b817bc2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-east-1:792248914698:loadbalancer/app/grafana-alb/60862a32185c3bf9",
            "mutual_authentication": [],
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.grafana_alb",
            "aws_lb_target_group.grafana_tg",
            "aws_security_group.grafana_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "grafana_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:792248914698:targetgroup/grafana-target-group/eb84442312607285",
            "arn_suffix": "targetgroup/grafana-target-group/eb84442312607285",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-east-1:792248914698:targetgroup/grafana-target-group/eb84442312607285",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-east-1:792248914698:loadbalancer/app/grafana-alb/60862a32185c3bf9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "grafana-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-067fa0610e0274258"
          },
          "dependencies": [
            "aws_alb.grafana_alb",
            "aws_security_group.grafana_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grafana_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:792248914698:security-group/sg-07597d2b2372d5411",
            "description": "grafana-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07597d2b2372d5411",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "grafana-sg",
            "name_prefix": "",
            "owner_id": "792248914698",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-067fa0610e0274258"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prometheus_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:792248914698:security-group/sg-0ae8c955ef4e37b29",
            "description": "Allow access to Prometheus",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae8c955ef4e37b29",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "prometheus-sg",
            "name_prefix": "",
            "owner_id": "792248914698",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-067fa0610e0274258"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}